objects/Room__c.object
<CustomObject>
    <label>Room</label>
    <nameField>
        <displayFormat>RM-{000}</displayFormat>
        <label>Room Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Hotel__c</fullName>
        <label>Hotel</label>
        <referenceTo>Hotel__c</referenceTo>
        <relationshipLabel>Rooms</relationshipLabel>
        <relationshipName>Rooms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tariff__c</fullName>
        <label>Tariff</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Occupancy__c</fullName>
        <label>Occupancy</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                    <default>true</default>
                    <label>Single</label>
                </value>
                <value>
                    <fullName>Double</fullName>
                </value>
                <value>
                    <fullName>Triple</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Room_Booked__c</fullName>
        <formula>IF( !ISBLANK( Tariff__c ) ,true,false)</formula>
        <label>Room Booked?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Tariff__c</fullName>
        <formula>IF( Tariff__c  &gt; 4000, Tariff__c  -  ( Tariff__c *  Discount__c  ) , Tariff__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Tariff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Reservation__c</fullName>
        <label>Total Reservation</label>
        <summaryForeignKey>Reservation__c.Room__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <validationRules>
        <fullName>Discount_should_not_be_negative</fullName>
        <active>true</active>
        <description>Discount_should_not_be_negative</description>
        <errorConditionFormula>Discount__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>Discount__c</errorDisplayField>
        <errorMessage>Discount should not be negative</errorMessage>
    </validationRules>
</CustomObject>